# android_calculator_basic

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/calculatingmachine/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  calculator.cpp  calculator.h  jni_bridge.cpp
app/src/main/java/com/example/calculatingmachine/: MainActivity.kt
app/src/main/java/com/example/calculatingmachine/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/calculatingmachine/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
